--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@types/react-dom": "^18.0.4",
     "@usedapp/core": "^1.0.2",
     "bootstrap": "^5.1.3",
+    "lightweight-charts": "^3.8.0",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-tradingview-embed": "^3.0.6",
     "typescript": "^4.6.4",
     "web-vitals": "^2.1.4"
   },
